# FileFormatConformance

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml  problem-matchers.json  renovate.json
.github/ISSUE_TEMPLATE/: conformance-file-bug.md  conformance-file-bug.yml  conformance-file-issue.yml  page-bug.yml  spec-issue.yml
.github/workflows/: archive.yml  cfc.yml  chores.yml  gpac.yml  post-pr.yml  pr.yml  publish.yml  test.yml
conformance-search/: .eslintrc  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
conformance-search/src/: index.css  main.tsx  vite-env.d.ts
conformance-search/src/components/: BoxComponent.tsx  Checkbox.tsx  Chip.tsx  CoverageSummary.tsx  Drawer.tsx  FeatureComponent.tsx  FileComponent.tsx  ListComponent.tsx  NavigationBar.tsx  Select.tsx  SpecsCovered.tsx  index.ts
conformance-search/src/contexts/: RefinementContext.ts
conformance-search/src/lib/: database.spec.ts  database.ts  search.spec.ts  search.ts  utils.ts
conformance-search/src/pages/: AboutPage.tsx  CoveragePage.tsx  SearchPage.tsx  pages.spec.tsx
conformance-search/src/types/: index.ts  json.ts
conformance-search/src/utils/: index.ts
conformance-search/tests/: setup.ts
conformance-search/tests/__mocks__/: boxes.json  coverage.json  dictionary.json  files.json  hierarchy.json
data/file_features/: .cfignore  README.md
data/rules/: hierarchy.json
data/schemas/: file-metadata.schema.json  gpac-extension.schema.json  gpac.schema.json  spec-info.schema.json  standard.schema.json  user-defined.schema.json
data/standard_features/: README.md
data/standard_features/14496-12/: boxes.json  brands.json  codecs.json  entity_groups.json  handlers.json  item_properties.json  item_references.json  sample_groups.json  spec_info.json  track_groups.json  track_references.json  user_defined.json
data/standard_features/14496-14/: brands.json  spec_info.json  user_defined.json
data/standard_features/14496-15/: boxes.json  brands.json  codecs.json  entity_groups.json  sample_groups.json  spec_info.json  track_groups.json  track_references.json  user_defined.json
data/standard_features/14496-30/: boxes.json  spec_info.json
data/standard_features/23008-12/: boxes.json  brands.json  entity_groups.json  handlers.json  item_properties.json  item_references.json  sample_groups.json  spec_info.json
file_features/: README.md
file_features/published/3gp/: female_amr67DTX_hinted.json  female_amr67DTX_hinted_gpac.json  female_amr67_hinted.json  female_amr67_hinted_gpac.json  male_amr122.json  male_amr122DTX.json  male_amr122DTX_gpac.json  male_amr122_gpac.json  pdin_example.json  pdin_example_gpac.json  rs_example_r1.json  rs_example_r1_gpac.json
file_features/published/green/: meta_2500000bps_0.json  meta_2500000bps_0_gpac.json  video_2500000bps_0.json  video_2500000bps_0_gpac.json
file_features/published/heif/: C001.json  C001_gpac.json  C002.json  C002_gpac.json  C003.json  C003_gpac.json  C004.json  C004_gpac.json  C005.json  C005_gpac.json  C006.json  C006_gpac.json  C007.json  C007_gpac.json  C008.json  C008_gpac.json  C009.json  C009_gpac.json  C010.json  C010_gpac.json  C011.json  C012.json  (+76 more)
file_features/under_consideration/: mhm1_preselection.json  mhm1_preselection_gpac.json
html/: README.md  package-lock.json  package.json
src/: README.md  pyproject.toml
src/common/: __init__.py  unique_logger.py
src/construct/: boxes.py  construct_all.py  coverage.py  dictionary.py  files.py  hierarchy.py
src/feature-extractor/: pyproject.toml
src/feature-extractor/feature_extractor/: file_features.py  main.py  spec_features.py  utils.py
src/feature-extractor/tests/: test_feature_extractor.py
src/feature_extractor/: file_features.py  get_sections.py  spec_features.py  standard_features.py  utils.py
src/tests/: test_files.py  test_hiearchy.py  test_validate.py
src/tests/__mocks__/: test_boxes.json
standard_features/: README.md
standard_features/14496-12/: boxes.json  entity_groups.json  item_properties.json  item_references.json  sample_groups.json  track_groups.json  track_references.json  user_defined.json
standard_features/14496-14/: user_defined.json
standard_features/14496-15/: boxes.json  entity_groups.json  item_properties.json  item_references.json  sample_groups.json  track_groups.json  track_references.json  user_defined.json
standard_features/14496-30/: boxes.json  entity_groups.json  item_references.json  sample_groups.json  track_references.json
standard_features/23008-12/: boxes.json  entity_groups.json  item_properties.json  item_references.json  sample_groups.json  track_groups.json  track_references.json
(+1108 files in other folders)
